--- a/less/global.less
+++ b/less/global.less
@@ -28,6 +28,18 @@ img{
     max-width:100%;
 }
 
+.page{
+    max-width:2000px;
+
+}
+
+.pagePadding{
+    margin-top:5%;
+    padding:0 5% 0 5%;
+}
+
+
+
 .container{
     // max-width:80%;
     width:80%;
