--- a/less/nav.less
+++ b/less/nav.less
@@ -1,7 +1,34 @@
-.nav-container{
-    display:flex;
-    nav{
-        text-decoration: none;
-        color:white;
+.navbar{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding-left: 1%;
+    padding-right: 1%;
+    background-color: white;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    
+    .links {
+        width: 50%;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-self: center;
+        font-size: 180%;
+        a {
+          text-decoration: none;
+          color: #BB1333;
+          font-weight: bold;
+          &:hover {
+            text-decoration: underline;
+          }
+        }   
+    }
+    img {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        width: 15%;
     }
 }
